# Bilanztool-SKR04

./: .dockerignore  .gitignore  App.tsx  BUILD_AND_RELEASE.md  CLEANUP.md  Hauptbuch.xlsx  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
.github/workflows/: publish-ghcr.yml  rust.yml
components/: AccountDetails.tsx  AccountManager.tsx  FileUpload.tsx  KPIBoard.tsx  ReportTable.tsx
services/: excelService.ts  skr04Service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
