[package]
name = "bilanztool-skr04"
version = "0.1.0"
description = "Professional financial statement generator for German accounting standards"
authors = ["paprika27"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
default = []
